--- a/Llamaindex_Llama3_Mixtral_RAGAS.ipynb
+++ b/Llamaindex_Llama3_Mixtral_RAGAS.ipynb
@@ -60,7 +60,7 @@
         "from llama_index.vector_stores.chroma import ChromaVectorStore #A vector store backend that uses Chroma for embedding storage and similarity searches.\n",
         "from llama_index.llms.groq import Groq #Integrates Groq-based LLMs for high-performance inference and language generation.\n",
         "from llama_index.core import Settings #Manages configuration settings for LlamaIndex components and operations.\n",
-        "from llama_index.core.node_parser import SentenceSplitter\n", #Splits text into sentences or smaller units for processing or indexing.\n",
+        "from llama_index.core.node_parser import SentenceSplitter #Splits text into sentences or smaller units for processing or indexing.\n",
         "from llama_index.llms.openai import OpenAI\n",
         "from datasets import Dataset\n",
         "\n",
